# VertexEngine-Code

./: LICENSE  PKG-INFO  README.md  main.py  pyproject.toml  setup.cfg
Documentation/: functions.json  gen_docs.py  index.html  search.html  template.html
Documentation/classes/: App.html  AssetManager.html  AudioManager.html  BaseWindow.html  BrowserToolsTabs.html  Card copy.html  Card.html  CollisionSystem.html  Dialog.html  Draw.html  FancyButton.html  FancyWindow.html  GameEngine.html  GraphicalMath.html  InputField.html  InputSystem.html  LegacyButton.html  LegacyInputField.html  LegacyText.html  Rect.html  Scene.html  Text.html  VBox.html  Vertex.html  VertexScreen.html  VertexUI.html  WebEngine.html  pygamewidgets.html  sdraw.html  update.html
Documentation/css/: style.css
Documentation/functions/: AudioLoadMusic.html  AudioLoadSound.html  AudioPlayMusic.html  AudioPlaySound.html  AudioStopMusic.html  DrawAALine.html  DrawAALines.html  DrawArc.html  DrawCircle.html  DrawElipse.html  DrawLine.html  DrawLines.html  DrawPolygon.html  DrawRect.html  getImage.html  load_image.html
src/VertexEngine/: SimpleGUI.py  VertexScreenModifiers.py  __init__.py  _base.py  assets.py  audio.py  engine.py  example.py  scenes.py
src/VertexEngine/AdvancedVWidgets/: ChatBubble.py  ChekBox.py  Counter.py  Dropdown.py  List.py  StatusLight.py  ToggleSwitch.py  WindowMods.py  Windows.py
src/VertexEngine/Collisions/: __init__.py  collisions.py
src/VertexEngine/GraphicalMath/: Vector2.py  __init__.py
src/VertexEngine/InputSystem/: BtnInputs.py  Events.py  KeyInputs.py
src/VertexEngine/Math/: _Vector2.py  __init__.py
src/VertexEngine/Vertex/: __init__.py
src/VertexEngine/VertexWidgets/AdvancedVWidgets/: OptionBtnWidget.py
src/VertexEngine/VertexWidgets/PygameVWidgets/: __init__.py
src/VertexEngine/examples/: test.py
src/VertexEngine/examples/games/Dodge/: main.py
src/VertexEngine/examples/games/platformer/: main.py
src/VertexEngine/examples/games/snake/: main.py
src/VertexEngine/math/: Vector2.py  __init__.py
