[project]
name = "VertexEngine"
version = "1.3rc4"
description = "An SDK for Python Development."
authors = [
  { name = "Tyrel Miguel", email = "annbasilan0828@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "pygame>=2.0",
  "PyQt6>=6.7"
]

[project.urls]
Documentation = "https://vertexenginedocs.netlify.app/"
Source = "https://github.com/TyrelGomez/VertexEngine-Code"
Issues = "https://github.com/TyrelGomez/VertexEngine-Code/issues"
Discord = "https://discord.com/channels/1468208686869643327/1468208687670890588"
[tool.setuptools.packages.find]
where = ["src"]
