[project]
name = "VertexEngine"
version = "1.5rc1"
description = "A high-performance SDK for Python Development."
authors = [
  { name = "Tyrel Miguel", email = "annbasilan0828@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "PyQt6>=6.7",
  "pygame>=2.6; python_version < '3.14'",
  "pygame-ce>=2.5.0; python_version >= '3.14'"
]

[project.urls]
Homepage = "https://vertexengine.onrender.com"
Documentation = "https://vertexenginedocs.netlify.app/"
Source = "https://github.com/TyrelGomez/VertexEngine-Code"
Issues = "https://github.com/TyrelGomez/VertexEngine-Code/issues"
Discord = "https://discord.com/channels/1468208686869643327/1468208687670890588"

[tool.setuptools.packages.find]
where = ["src"]
