[project]
name = "VertexEngine"
version = "1.8.6"
description = "A high-performance SDK for Python Development."
authors = [
  { name = "Tyrel Miguel", email = "annbasilan0828@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "PyQt6>=6.7",
  "pygame>=2.6; python_version < '3.14'",
  "pygame-ce>=2.5.0; python_version >= '3.14'"
]

[project.urls]
Homepage = "https://vertexengine-zii6.onrender.com"
Documentation = "https://vertexenginedocs.netlify.app"
Tutorials = "https://www.youtube.com/watch?v=-P4t6UabuDU&t=0s"
"Official Tech Site" = "https://tyrel.onrender.com"
Source = "https://github.com/TyrelGomez/VertexEngine-Code"
Issues = "https://github.com/TyrelGomez/VertexEngine-Code/issues"
Discord = "https://discord.gg/jqG8kQjX"
[tool.setuptools.packages.find]
where = ["src"]
